# Research-Companion-

./: .gitignore  README.md  build.ps1  build.sh  run.ps1  run.sh
app/: README.md  package-lock.json  package.json  vite.config.js
app/assets/: icon.icns
app/electron/: main.js  preload.cjs  preload.js
app/src/: App.jsx  index.css
app/src/components/: AddDocPanel.jsx  CitationCard.jsx  ConfidenceBadge.jsx  LocalAISetup.jsx  SettingsModal.jsx
app/src/pages/: Chat.jsx  (+2 more)
research_companion/: .env.example  CLAUDE.md  RAG_SYSTEM_PROMPT.md  build_backend.ps1  build_backend.sh  pyproject.toml  run_server.py
research_companion/api/: main.py  schemas.py
research_companion/api/routes/: chat.py  ingest.py  library.py  local_ai.py  search.py
research_companion/generation/: __init__.py  citation_formatter.py  local_reasoner.py  prompt_builder.py  providers.py  rag_pipeline.py
research_companion/ingestion/: __init__.py  chunker.py  metadata_extractor.py  models.py  router.py
research_companion/ingestion/ocr/: __init__.py  easyocr_runner.py  vision_corrector.py
research_companion/ingestion/parsers/: __init__.py  figure_parser.py  marker_parser.py  nougat_parser.py  pymupdf_parser.py  tatr_parser.py
research_companion/ingestion/sources/: __init__.py  local_folder.py  notion_reader.py  zotero_reader.py
research_companion/retrieval/: __init__.py  embedder.py  hybrid_search.py  reranker.py  vector_store.py
research_companion/tests/: e2e_checklist.md  integration_test.py  test_parsers.py  test_retrieval.py
research_companion/tests/eval/: test_cases.json
