[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-companion"
version = "0.1.0"
description = "Local-first AI research paper assistant for graduate students"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "chromadb>=0.5.0",
    "anthropic>=0.28.0",
    "notion-client>=2.2.1",
    "structlog>=24.1.0",
    "requests>=2.32.0",
    "langchain-text-splitters>=0.2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
embeddings = [
    "FlagEmbedding>=1.2.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
]
ocr = [
    "easyocr>=1.7.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
]
parsers = [
    "marker-pdf>=0.3.0",
]
reranker = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]
all = [
    "research-companion[embeddings,ocr,parsers,reranker,dev]",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "retrieval", "generation", "api"]
